force-app/main/default/objects/Carro__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Azul</fullName>
            </value>
            <value>
                <fullName>Negro</fullName>
            </value>
            <value>
                <fullName>Rojo</fullName>
            </value>
            <value>
                <fullName>Verde</fullName>
            </value>
            <value>
                <fullName>Naranja</fullName>
            </value>
            <value>
                <fullName>Morado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>